-------------
Version 0.6.9
-------------
- Removed the now defunct !items module for Age of Conan.
  An alternative third party items database is available at http://bebot.shadow-realm.org/aoc-0-6-x-customunofficial-modules/alternative-central-itemdb-%28!item!items!itemreg%28auto%29%29/


-------------
Version 0.6.8
-------------
- Changed order of the all link so 1st added is last on 1st, giving it priority
- Privgroup command Help no longer shows for AoC
- Fixed Several Bugs in the bid info blob
- Fixed some issues with adding alt with points, the merge process should work better now
- Raid announce delay is now configurable via Settings.
- Fixed crash issue when invalid security group is setup for relay
- Fixed removal of old relay entries in the table
- Added support for Rise of the godslayer expansion for AoC, courtesy of Chaoz.
- !help now only displays help for the channel it is called from unless another channel is specifically requested.


-------------
Version 0.6.7
-------------
- Improved the cURL get_site function to support POST and Login.
- Added a Link for turning LFT on in click to join blob, can be disabled under settings.
- Autoinvites users who apear to have LD during a Raid.
- rally's can now be saved and loaded
- The bot will now automatically use cURL if it is available. The previous get_site setting has been removed
  and a new setting added to allow disabling cURL.
- The socket method used for get_site should now properly time out instead of waiting for the default
  socket timeout which is 60 seconds for most installs.
- Removed a bug where cron jobs sometimes didn't execute right on time.
- Added Tank and Caller Info to Raid Spam.
- Added Ability to kick all users in PG that arnt in Raid.
- Some Bug Fixes and Spelling Corrections in Raid mod.
- Make it so you goto be in PG to join Raid, can be disable in settings and only applies to AO game.
- Roster Module now Supports use of dimension name for AO