@@ -3,6 +3,7 @@ Version 0.6.9
 -------------
 - Removed the now defunct !items module for Age of Conan.
   An alternative third party items database is available at http://bebot.shadow-realm.org/aoc-0-6-x-customunofficial-modules/alternative-central-itemdb-%28!item!items!itemreg%28auto%29%29/
+- Fixed a bug in !massmsg/!massinvite reported by bitnykk @ Forum
 
 
 -------------
